[gd_scene load_steps=15 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://practice/practice.gd" type="Script" id=2]
[ext_resource path="res://enemy/fly_enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/tester.gd" type="Script" id=4]
[ext_resource path="res://enemy/ground_enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://boss/boss.tscn" type="PackedScene" id=6]
[ext_resource path="res://bullet/art/enemy_bullet/shotgun_bullet/collide_1.png" type="Texture" id=7]
[ext_resource path="res://bullet/art/enemy_bullet/shotgun_bullet/collide_2.png" type="Texture" id=8]
[ext_resource path="res://bullet/art/enemy_bullet/shotgun_bullet/collide_3.png" type="Texture" id=9]
[ext_resource path="res://bullet/art/enemy_bullet/shotgun_bullet/collide_6.png" type="Texture" id=10]
[ext_resource path="res://bullet/art/enemy_bullet/shotgun_bullet/collide_4.png" type="Texture" id=11]
[ext_resource path="res://bullet/art/enemy_bullet/shotgun_bullet/collide_5.png" type="Texture" id=12]
[ext_resource path="res://bullet/art/enemy_bullet/shotgun_bullet/fly_1.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 25.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[node name="practice" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 599.0 ],
"_edit_vertical_guides_": [ 590.229, -0.578941 ]
}

[node name="obstacle_container" type="Node" parent="."]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 428.323, 293.406 )
script = ExtResource( 4 )

[node name="camera" type="Camera2D" parent="player"]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true

[node name="enemy_container" type="Node" parent="."]

[node name="ground_enemy" parent="enemy_container" instance=ExtResource( 5 )]
position = Vector2( 500, 300 )

[node name="fly_enemy" parent="enemy_container" instance=ExtResource( 3 )]
position = Vector2( 500, 200 )

[node name="boss" parent="enemy_container" instance=ExtResource( 6 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="enemy_container"]
visible = false
position = Vector2( 446.317, 246.317 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
frame = 4
